点击效果，左侧弹出目录（界面还没做有点丑）

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.lawapp">
+    package="com.example.law">
 
     <application
         android:allowBackup="true"
@@ -10,15 +10,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".activity.MainActivity">
+        <activity android:name="com.example.law.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.LawActivity" />
-        <activity android:name=".activity.RegulationActivity" />
+        <activity android:name="com.example.law.activity.LawActivity" />
+        <activity android:name="com.example.law.activity.RegulationActivity" />
     </application>
 
 </manifest>
