添加搜索界面，修改控件UI（搜索功能还未实装），标题走马灯效果

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
             </intent-filter>
         </activity>
         <activity android:name="com.example.law.activity.RegulationActivity" />
+        <activity android:name="com.example.law.activity.SelectActivity" />
     </application>
 
 </manifest>
