--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,10 @@ android {
     }
 }
 
+/*apply plugin: 'com.android.application'
+//GreenDao插件
+apply plugin: 'org.greenrobot.greendao'*/
+
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -33,4 +37,17 @@ dependencies {
 
     implementation 'com.wenwenwen888:searchedittext:1.0.0'
 
+    /*//GreenDao插件依赖
+    implementation 'org.greenrobot:greendao:3.2.2'
+
+    //生成GreenDao的文件目录
+    greendao {
+        // 指定数据库schema版本号，迁移等操作会用到
+        schemaVersion 1
+        // 设置生成数据库文件的目录，默认是在build中，可以将生成的文件放到我们的java目录中
+        targetGenDir 'src/main/java'
+        // 设置生成的数据库相关文件的包名，默认为entity所在的包名
+        daoPackage 'com.shufeng.greendao.gen'
+    }*/
 }
+
