--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,15 @@ buildscript {
     repositories {
         google()
         jcenter()
+
+        /* // 添加GreenDao的仓库
+         mavenCentral()*/
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.1"
 
+        /*//GreenDao插件
+        classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'*/
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
