--- a/build.gradle
+++ b/build.gradle
@@ -4,14 +4,14 @@ buildscript {
         google()
         jcenter()
 
-        /* // 添加GreenDao的仓库
-         mavenCentral()*/
+        // 添加GreenDao的仓库
+        mavenCentral()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.1"
 
-        /*//GreenDao插件
-        classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'*/
+        //GreenDao插件
+        classpath 'org.greenrobot:greendao-gradle-plugin:3.3.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
