--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name="com.example.law.activity.LawActivity">
+        <activity android:name="com.example.law.activity.WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.example.law.activity.LawActivity"/>
         <activity android:name="com.example.law.activity.RegulationActivity" />
         <activity android:name="com.example.law.activity.SelectActivity" />
         <activity android:name="com.example.law.activity.SettingActivity" />
